# imapdump

./: .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  config.yml  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: create-release.yml  python-publish.yml
imapdump/: dump.py
imapdump/config/: default_values.py  fileconfig.py  imap_config.py  imapdump_config.py
imapdump/db/: data_service.py
imapdump/enums/: imap_encryption_mode.py
imapdump/imap/: dumper.py
imapdump/models/: mail.py
imapdump/utils/: hash_utils.py
src/: args.rs  dumper.rs  imapclient.rs  main.rs
src/imapdump/: __main__.py  dump.py
src/imapdump/config/: config.py  handler.py  imap_config.py
src/imapdump/db/: data_service.py
src/imapdump/enums/: imap_encryption_mode.py
src/imapdump/imap/: dumper.py  handler.py
src/imapdump/models/: mail.py
src/imapdump/utils/: hash_utils.py  str_utils.py
