[package]
name = "imapdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "^0.4.17", features = ["std"] }
simple_logger = "4.2.0"
imap = "2.4.1"
native-tls = "0.2.2"
clap = { version = "4.4.8", features = ["derive"] }
imap-proto = "0.16.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
